[Bash] Add `-XX:+EnableDynamicAgentLoading` on JDK 11+.